--- a/static/style.css
+++ b/static/style.css
@@ -1,9 +1,15 @@
 #user{
     position: absolute;
+    left:40%;
 }
 #biog{
     position: absolute;
     top: 100px;
+    left: 45%;
+}
+select {
+  position: relative;
+  z-index: 1001; /* bring it to front */
 }
 
 #menuArrow{
@@ -32,12 +38,14 @@
     border-style: solid;
     background-color: pink;
     z-index:2;
+    height:40%;
 }
 #colors{
     border-color: #7788de;
     border-style: solid;
     background-color: #aaaadd;
     z-index:3;
+    height:40%;
 }
 
 #margin{
@@ -45,6 +53,7 @@
     border-style: solid;
     background-color: #aabbaa;
     z-index:3;
+    height:40%;
 }
 
 
@@ -126,19 +135,20 @@
 
 .pops{
     width:60%;
-    height: 40%;
     position:absolute;
     left:30%;
     top:30%;
     z-index: 2;
     text-align: center;
     display: none;
+    overflow:visible;
 }
 #templates{
     border-color: #dd9944;
     border-style: solid;
     background-color: #fabf37;
     z-index:3;
+    height:60%;
 }
 #templatesHeadbar{
     background-color: white;
@@ -167,4 +177,57 @@
     position:absolute;
     top:28%;
     left:38%;
+}
+.boxes{
+    border-color: black;
+    border-style: solid;
+    border-width:2px;
+    background-color: none;
+    align-items: center;
+    text-align: center;
+}
+#box1{
+    position:absolute;
+    width:30%;
+    height:49%;
+    left:0%;
+    bottom:51%;
+}
+#box2{
+    position:absolute;
+    width:30%;
+    height:50.5%;
+    left:0%;
+    bottom:0%;
+}
+#box3{
+    position:absolute;
+    width:39.25%;
+    height:50.5%;
+    left:30.25%;
+    bottom:0%;
+}
+#box4{
+    position:absolute;
+    width:30%;
+    height:49%;
+    left:70%;
+    bottom:51%;
+}
+#box5{
+    position:absolute;
+    width:30%;
+    height:50.5%;
+    left:70%;
+    bottom:0%;
+}
+#box6{
+    position:absolute;
+    width: 0%;
+    height: 0%;
+    left:100%;
+    bottom:0%;
+}
+.boxTexts{
+    text-align: center;
 }
