--- a/static/style.css
+++ b/static/style.css
@@ -55,6 +55,13 @@ select {
     z-index:3;
     height:40%;
 }
+#boxInfo{
+    border-color: #9922ee;
+    border-style: solid;
+    background-color: violet;
+    z-index:2;
+    height:40%;
+}
 
 
 #writeheadbar{
@@ -94,6 +101,18 @@ select {
     cursor: move;
     /*z-index: 3;*/
 }
+#boxInfoHeadbar{
+    background-color: white;
+    /*width:240px;
+    height:30px;*/
+    text-align: center;
+    border-color:violet;
+    border-style: solid;
+    top:-30px;
+    padding: 10px;
+    cursor: move;
+    /*z-index: 3;*/
+}
 
 #nameLabel{
     position:relative;
@@ -121,6 +140,11 @@ select {
     top:2px;
 }
 #marginCloser{
+    position: absolute;
+    right:2px;
+    top:2px;
+}
+#boxInfoCloser{
     position: absolute;
     right:2px;
     top:2px;
