--- a/static/style.css
+++ b/static/style.css
@@ -149,6 +149,11 @@ select {
     right:2px;
     top:2px;
 }
+#clubsCloser{
+    position: absolute;
+    right:2px;
+    top:2px;
+}
 
 
 .menuButtons{
@@ -216,6 +221,8 @@ select {
     height:49%;
     left:0%;
     bottom:51%;
+    align-items: center;
+
 }
 #box2{
     position:absolute;
@@ -223,6 +230,7 @@ select {
     height:50.5%;
     left:0%;
     bottom:0%;
+    align-items: center;
 }
 #box3{
     position:absolute;
@@ -230,6 +238,7 @@ select {
     height:50.5%;
     left:30.25%;
     bottom:0%;
+    align-items: center;
 }
 #box4{
     position:absolute;
@@ -237,6 +246,7 @@ select {
     height:49%;
     left:70%;
     bottom:51%;
+    align-items: center;
 }
 #box5{
     position:absolute;
@@ -244,6 +254,7 @@ select {
     height:50.5%;
     left:70%;
     bottom:0%;
+    align-items: center;
 }
 #box6{
     position:absolute;
@@ -251,7 +262,20 @@ select {
     height: 0%;
     left:100%;
     bottom:0%;
+    align-items: center;
 }
 .boxTexts{
     text-align: center;
+}
+#clubsPopUp{
+    border-color: #7788de;
+    border-style: solid;
+    background-color: #aaaadd;
+    z-index:3;
+    height:40%;  
+}
+#clubsButton{
+    position:inherit;
+    bottom: 2%;
+    left:20%;
 }
