--- a/templates/front.html
+++ b/templates/front.html
@@ -30,36 +30,35 @@
         <div id="portfolio" style="display:none;">
 
 
-
+            <ol id="olBox"></ol>
             <folder>
                 <h1 id="user">Portfolio Title</h1>
                 <p id="biog" style="white-space: pre-wrap;"></p>
 
                 <div id="box1" class="boxes">
                     <p id="box1Text" class="boxTexts">Box 1</p>
-                    <ol id="olBox1"></ol>
+
 
                 </div>
                 <div id="box2" class="boxes">
                     <p id="box2Text" class="boxTexts"> Box 2</p>
-                    <ol id="olBox2"></ol>
 
                 </div>
                 <div id="box3" class="boxes">
                     <p id="box3Text" class="boxTexts">Box 3</p>
-                    <ol id="olBox3"></ol>
+
                 </div>
                 <div id="box4" class="boxes">
                     <p id="box4Text" class="boxTexts"> Box 4</p>
-                    <ol id="olBox4"></ol>
+
                 </div>
                 <div id="box5" class="boxes">
                     <p id="box5Text" class="boxTexts"> Box 5</p>
-                    <ol id="olBox5"></ol>
+
                 </div>
                 <div id="box6" class="boxes">
                     <p id="box6Text" class="boxTexts">Box 6</p>
-                    <ol id="olBox6"></ol>
+
                 </div>                         
             </folder>
             
